fix vertical / horizontal naming

--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -1,6 +1,5 @@
 %% future_work.tex
-
-Deep learning is far from being a system with human-like intelligence. Consequently, there is a massive amount of work to be done in the future to get closer to this ultimate goal (while the goal should still be to build a system that supports humans and not behaves like one). However, the implementations presented in this thesis are far from such a system. Consequently, a conclusion is drawn, and the next steps are proposed for the models presented in this thesis, but a long-term vision is presented as well. Specifically, some insights are given to the neuroscientific concept that seems very promising in section \secref{future_neuro_concepts}, and future work is described for vertical self-organisation in \secref{future_vso} as well as for horizontal self-organisation in \secref{future_hso}. Afterwards, in \secref{future_3_stage}, a new model is presented on a very abstract level, which could work better intuitively, but a concrete implementation is unclear. In \secref{useful_representations}, the usefulness of representations is discussed. In the last \secref{cognition_reasoning}, the author gives a personal opinion about the future of AI, which is not supported by scientific arguments but might be interesting for (motivated) readers.
+Deep learning is far from being a system with human-like intelligence. Consequently, there is a massive amount of work to be done in the future to get closer to this ultimate goal (while the goal should still be to build a system that supports humans and not behaves like one). However, the implementations presented in this thesis are far from such a system. Consequently, a conclusion is drawn, and the next steps are proposed for the models presented in this thesis, but a long-term vision is presented as well. Specifically, some insights are given to the neuroscientific concept that seems very promising in section \secref{future_neuro_concepts}, and future work is described for horizontal self-organisation in \secref{future_hso} as well as for vertical self-organisation in \secref{future_vso}. Afterwards, in \secref{future_3_stage}, a new model is presented on a very abstract level, which could work better intuitively, but a concrete implementation is unclear. In \secref{useful_representations}, the usefulness of representations is discussed. In the last \secref{cognition_reasoning}, the author gives a personal opinion about the future of AI, which is not supported by scientific arguments but might be interesting for (motivated) readers.
 
 
 
@@ -11,16 +10,16 @@ The most promising concepts identified in this work for improving deep learning 
 
 
 \section{Implemented Models}\seclbl{future_so}
-The concepts from neuroscience are implemented in two specific ways, these are called vertical and horizontal self-organisation. It is important to note that the implementation of \emph{neuroscientific concepts} is the main focus of this thesis and not to push scores like accuracy on benchmarks. In general, a comparison with end-to-end backpropagation of error is not appropriate in this field: Backpropagation has been optimised for over 30 years by many institutes and even more researchers, and therefore alternative learning concepts cannot be expected to outperform backpropagation of error instantly. Thus, backpropagation of error is note considered an appropriate baseline.
+The concepts from neuroscience are implemented in two specific ways, these are called horizontal and vertical self-organisation. It is important to note that the implementation of \emph{neuroscientific concepts} is the main focus of this thesis and not to push scores like accuracy on benchmarks. In general, a comparison with end-to-end backpropagation of error is not appropriate in this field: Backpropagation has been optimised for over 30 years by many institutes and even more researchers, and therefore alternative learning concepts cannot be expected to outperform backpropagation of error instantly. Thus, backpropagation of error is note considered an appropriate baseline.
 
 Rather, the proposed implementations show that this type of implementation of neuroscientific concepts can facilitate learning. However, the implementation has not yet been optimised and incorporated in big networks that might perform on the level of existing systems. Rather, these implementations are to be understood as a basis for further work, which, for example, deals with the concepts presented in \secref{future_3_stage}, \secref{useful_representations} and \secref{cognition_reasoning}. Thus, this thesis is to be understood as a preliminary work of a larger research project to develop new concepts that improve AI in a long-term way.
 
 
-\subsection{Vertical Self-Organisation}\seclbl{future_vso}
+\subsection{Horizontal Self-Organisation}\seclbl{future_hso}
 TODO: this section is not yet complete as many experiments are still ongoing...
 
 
-Vertical self-organisation optimises a model layer-wise by minimising proxy objective functions.
+Horizontal self-organisation optimises a model layer-wise by minimising proxy objective functions.
 For classification, a sample is compared to the average activation of each class. This average activation can be understood as an object prototype within a world model. Thus, it is compared to which prototype a sample fits best. The problem is that a single object prototype is not sufficient. As an example, \figref{digit_4_versions} shows different versions of the digit $4$ that can be found in the MNIST dataset. This shows that a digit can be written in different ways\sidenote{this applies to all kinds of datasets: Most objects can have various visual characteristics (size, colour, shape) or look different from different viewpoints}.
 Consequently, the digits and, thus, the activations look different for samples from the same class, and the use of more than one prototype per class seems helpful. Thus, instead of calculating the average activation per class, it could help to divide the activations per class into representative groups using a hierarchical clustering algorithm and to calculate the average activation (i.e. the cluster centre) per group. By doing so, multiple representative prototypes per class are obtained, and the prediction could become a lot more accurate.
 
@@ -35,16 +34,16 @@ Consequently, the digits and, thus, the activations look different for samples f
 The generated representations have so far only been examined for classification. However, since the objective function does not explicitly optimise the model for classification, it would be interesting to investigate what other information is contained in the representations. Furthermore, the representations are currently generated with a supervised approach since the labels are used in the loss function. However, the use of labels is generally not desirable because the manual creation of labels is labour-intensive. On the other hand, an unsupervised (or self-supervised) approach extracts features without labels. Moreover, it is known that the brain also functions unsupervised to a large extent and is thus biologically more plausible.
 Thus, the implementation of a loss function that does not rely on labels would be beneficial. Furthermore, the model should be tested on other datasets than MNIST to evaluate how well it can scale.
 
-The proposed vertical self-organisation approach uses a novel proxy objective function. Models based on proxy objective functions are biologically more plausible and a hot research topic (c.f. \secref{alt_train_algo}). Recently, many algorithms have been proposed, such as the forward-forward algorithm \sidecite{ff_algo}, which have caused a stir in the community by challenging the classical backpropagation of error as an optimisation algorithm. However, despite the fact that algorithms using proxy objective functions are biologically more plausible, these algorithms do not provide many benefits yet. Models trained with backpropagation of error are still superior, especially on well-known tasks such as classification. One of the author's hope was that such algorithms have other advantages, such as better robustness. However, evaluating the models presented in this work and other models, such as the forward-forward algorithm, has crushed this initial belief: No model that uses proxy objective function achieved better results on the corrupted MNIST-C dataset than end-to-end backpropagation of error
+The proposed horizontal self-organisation approach uses a novel proxy objective function. Models based on proxy objective functions are biologically more plausible and a hot research topic (c.f. \secref{alt_train_algo}). Recently, many algorithms have been proposed, such as the forward-forward algorithm \sidecite{ff_algo}, which have caused a stir in the community by challenging the classical backpropagation of error as an optimisation algorithm. However, despite the fact that algorithms using proxy objective functions are biologically more plausible, these algorithms do not provide many benefits yet. Models trained with backpropagation of error are still superior, especially on well-known tasks such as classification. One of the author's hope was that such algorithms have other advantages, such as better robustness. However, evaluating the models presented in this work and other models, such as the forward-forward algorithm, has crushed this initial belief: No model that uses proxy objective function achieved better results on the corrupted MNIST-C dataset than end-to-end backpropagation of error
 
 
-\subsection{Horizontal Self-Organisation}\seclbl{future_hso}
+\subsection{Vertical Self-Organisation}\seclbl{future_vso}
 TODO: this section is incomplete as many experiments are ongoing...
 
-Horizontal self-organisation splits the input image into multiple patches and processes each patch with an independent model.
-Similar to vertical self-organisation (c.f. \secref{future_vso}), the prediction accuracy could be improved by using more prototypes per class, as digits of the same class can look different. In the case of horizontal self-organisation, the $\boldsymbol{\mu}$ values per VAE should be clustered hierarchically to obtain groups of similar-looking digits per class. Afterwards, the average value per group can be calculated to obtain more prototypes per class.
+Vertical self-organisation splits the input image into multiple patches and processes each patch with an independent model.
+Similar to horizontal self-organisation (c.f. \secref{future_hso}), the prediction accuracy could be improved by using more prototypes per class, as digits of the same class can look different. In the case of vertical self-organisation, the $\boldsymbol{\mu}$ values per VAE should be clustered hierarchically to obtain groups of similar-looking digits per class. Afterwards, the average value per group can be calculated to obtain more prototypes per class.
 
-An essential concept in the human brain is the prevention of early commitment\sidecite{Marr_2010} (c.f. \secref{future_3_stage}), i.e. that a single entity such as a network layer not commits to something and then persists. Typical CNN architectures for classification have this problem by design, as they combine low-level features into higher-level features. Low-level features are detected locally; thus, it is already determined which feature is within the image before global information is considered. The proposed architecture for horizontal self-organisation reduces this problem by creating representations of image patches. The patches are so small that they contain only enough information to build low-level features. For example, the representations from a single VAE cannot be clearly assigned to a class and thus do not contain enough information to commit to an object. Therefore, the VAEs can be considered low-level feature extractors, such as the first layer of a convolutional network. To create higher-level features, communication with neighbouring VAEs (i.e. when looking at the big picture) is needed. Each VAE extracts low-level features (local view) and communicates with other VAEs (global view) to determine their representation. Therefore, this architecture is less susceptible to the early commitment problem than typical end-to-end trained neural networks.
+An essential concept in the human brain is the prevention of early commitment\sidecite{Marr_2010} (c.f. \secref{future_3_stage}), i.e. that a single entity such as a network layer not commits to something and then persists. Typical CNN architectures for classification have this problem by design, as they combine low-level features into higher-level features. Low-level features are detected locally; thus, it is already determined which feature is within the image before global information is considered. The proposed architecture for vertical self-organisation reduces this problem by creating representations of image patches. The patches are so small that they contain only enough information to build low-level features. For example, the representations from a single VAE cannot be clearly assigned to a class and thus do not contain enough information to commit to an object. Therefore, the VAEs can be considered low-level feature extractors, such as the first layer of a convolutional network. To create higher-level features, communication with neighbouring VAEs (i.e. when looking at the big picture) is needed. Each VAE extracts low-level features (local view) and communicates with other VAEs (global view) to determine their representation. Therefore, this architecture is less susceptible to the early commitment problem than typical end-to-end trained neural networks.
 Furthermore, the representations are learned unsupervised. For classification, the labels are fed into the network \emph{after} training in order to compute average class representations. Thus, no class representation but an image representation is learned during training. This further reduces the problem of individual VAEs committing to a class.
 
 In future work, this effect should even be intensified by further reducing the size of the patches and using more VAEs. It can be assumed that with $16$ VAEs ($4\times4$), the field of view is so restricted that each VAE can only produce very poor representations, and these can only be randomly assigned to a class. With more VAEs, communication can also be restricted locally: With $2\times2$ VAEs, each VAE automatically receives information about the entire image when communicating with its neighbours. With $4\times4$ VAEs, on the other hand, it is possible to have each VAE communicate only with its immediate neighbours. In this case, global image information must be propagated over several time steps from one VAE to the next.
@@ -64,7 +63,7 @@ Since these pixel groups keep each other active, neurons that represent insignif
 
 The lateral support, however, is limited to local patterns, i.e. the lateral support in S$1$ is not sufficient to recognise whole objects or scenes, but only parts of them. In stage S$2$, however, these features are mapped to whole objects. These object representations in S$2$ are independent of transformation and position. Projection fibres do the mapping of several low-level features to a concrete object. These implicitly remove transformations and position information from the features and assemble them into objects. Projection fibres can be interpreted as a kind of graph that combines features hierarchically, ignoring local distortions to create transformation-independent object detection. Stage S$3$, on the other hand, stores very abstract prototypes of such objects, and by matching S$2$ and S$3$, the captured object instances can finally be d with the brain's memory.
 
-The described model contains exciting concepts. Especially the prevention of early commitment and dynamic fibres seem very promising. However, a concrete implementation that works for complex images like natural photos has yet to be implemented, despite a lot of effort in research. There is potential in using the recently popularised graph networks as projection fibres and thus learning the projections without relying on restricted mathematical models. For example, VAE or VQ-VAE, as in horizontal self-organisation, could be used as feature extractors. The advantage of these autoencoder types is that they can extract local patterns and describe them as vectors in a ``meaningful'' latent space, i.e. similar vectors lie closer together in the latent space or, in the case of VQ-VAEs, are even discrete values. This facilitates the statistical learning and mapping of similar embedding vectors together. Horizontal self-organisation (c.f. \secref{future_hso}) is considered an important preliminary work to implement such a system. In contrast to horizontal self-organisation, autoencoders could be applied at any image position to obtain continuous pixel representations from the same latent space. The autoencoders can thus be used as feature extractors to extract good representations of small image patches. Afterwards, graph neural networks (GNNs) could be used to combine the embedding vectors into higher-level features. GNNs have already been used for image classification in recent years, mainly by identifying super-pixels and connecting them by graphs to recognise object structures \sidecite{Long_yan_chen_2021}.  One problem with GNNs is that they are often flat, i.e. many nodes lie on the same plane. This does not comply with the model of projection fibres, which must be highly hierarchical due to the large number of possible pattern combinations. A remedy to this issue could be using differential pooling \sidecite{10.5555/3327345.3327389, Vasudevan_Bassenne_Islam_Xing_2023}.
+The described model contains exciting concepts. Especially the prevention of early commitment and dynamic fibres seem very promising. However, a concrete implementation that works for complex images like natural photos has yet to be implemented, despite a lot of effort in research. There is potential in using the recently popularised graph networks as projection fibres and thus learning the projections without relying on restricted mathematical models. For example, VAE or VQ-VAE, as in vertical self-organisation, could be used as feature extractors. The advantage of these autoencoder types is that they can extract local patterns and describe them as vectors in a ``meaningful'' latent space, i.e. similar vectors lie closer together in the latent space or, in the case of VQ-VAEs, are even discrete values. This facilitates the statistical learning and mapping of similar embedding vectors together. Vertical self-organisation (c.f. \secref{future_vso}) is considered an important preliminary work to implement such a system. In contrast to vertical self-organisation, autoencoders could be applied at any image position to obtain continuous pixel representations from the same latent space. The autoencoders can thus be used as feature extractors to extract good representations of small image patches. Afterwards, graph neural networks (GNNs) could be used to combine the embedding vectors into higher-level features. GNNs have already been used for image classification in recent years, mainly by identifying super-pixels and connecting them by graphs to recognise object structures \sidecite{Long_yan_chen_2021}.  One problem with GNNs is that they are often flat, i.e. many nodes lie on the same plane. This does not comply with the model of projection fibres, which must be highly hierarchical due to the large number of possible pattern combinations. A remedy to this issue could be using differential pooling \sidecite{10.5555/3327345.3327389, Vasudevan_Bassenne_Islam_Xing_2023}.
 
 However, the goal is not to identify objects with graph structures. Instead, the graph should be able to match objects from images with abstract prototypes. In this way, the network should learn to ignore slight transformations and rotations. For example, GNNs for object recognition could be combined with graph matching networks \sidecite{li2019graph, Xu_Nikolentzos_Vazirgiannis_Boström_2022} and thus might be used to match objects locally and globally despite slight transformations. This matching would correspond to projection fibres from L$1$ to L$2$ and compare objects within an image with mental prototypes. However, many questions remain, such as how objects are identified in images (i.e. how to remove the background) or how the mental prototypes get into L$2$ in advance in order that they can be matched. Furthermore, one must consider iterative matching to avoid early commitment: Low-level features should not commit to an object. Therefore, low-level features have to be extracted, and only a global view of all features allows to give them meaning. Thus, the learning process might iterate between updating features locally and giving them meaning in the global context.
 
