--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -91,9 +91,9 @@ This thesis makes the following contributions:
 The remainder of the thesis is organised as follows: In \chref{fundamentals}, the fundamentals of deep learning and neurocomputing are explained in detail.
 Experts may skip this chapter; especially the second section on neurocomputing can be omitted, as it is not fundamental for understanding this thesis but only intended for interested readers or those who want to get a better overview of the field.
 \chref{rel_work} introduces the related work. Next, \chref{neuro_concepts} identifies promising findings from neuroscience that might help to improve current deep learning systems. Furthermore, it proposes how these neuroscientific concepts could be implemented in a deep learning setting.
-In \chref{vertical_self_org} and \chref*{horizontal_self_org}, two different architectures incorporating these concepts are presented:
-\chref{vertical_self_org} describes a network based on vertical self-organisation. The proposed model trains each layer in parallel using proxy objective functions and can still extract hierarchical features.
-The model described in \chref{horizontal_self_org} uses horizontal self-organisation by dividing the data into patches and analysing them on independent but communicating sub-models.
+In \chref{horizontal_self_org} and \chref*{vertical_self_org}, two different architectures incorporating these concepts are presented:
+\chref{horizontal_self_org} describes a network based on horizontal self-organisation. The proposed model trains each layer in parallel using proxy objective functions and can still extract hierarchical features.
+The model described in \chref{vertical_self_org} uses vertical self-organisation by dividing the data into patches and analysing them on independent but communicating sub-models.
 Finally, in \chref{future_work}, future work is described, and some insights and intuitions of the author are given about which neuroscience concepts seem promising and which do not, and what the next steps for developing more intelligent systems could be.
 
 
