--- a/tex/related_work.tex
+++ b/tex/related_work.tex
@@ -360,7 +360,7 @@ By doing so, the latent space becomes, by design, continuous and allows random s
 
 
 
-\subsection{Self-Supervised Learning}
+\subsection{Self-Supervised Learning}\seclbl{visual_rep_learning_ssl}
 Other approaches do not compress data but generate a supervision signal themselves.
 These methods are thus based on \emph{self-supervised learning}.
 Typically, the input is augmented, and either the augmentation parameters are predicted, the original version of the image is reconstructed, or consistent representations among augmented views of the image are learned.
