--- a/tex/vertical_self_org.tex
+++ b/tex/vertical_self_org.tex
@@ -467,7 +467,7 @@ Therefore, communication with neighbouring models is necessary to agree on an im
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.99\textwidth]{average_sample}
-    caption[Average sample of the MNIST dataset per class]{The average of all samples in the MNIST dataset for each class. The first row shows the average of all samples, and the 2nd to 5th row is the average per patch fed into the models.}
+    \caption[Average sample of the MNIST dataset per class]{The average of all samples in the MNIST dataset for each class. The first row shows the average of all samples, and the 2nd to 5th row is the average per patch fed into the models.}
     \figlbl{average_sample}
 \end{figure}
 
