--- a/tex/math.tex
+++ b/tex/math.tex
@@ -15,6 +15,7 @@ Depending on the context, a variable can be a scalar value, a vector, or a matri
 							& $\boldsymbol{x}[c]$ & or vector $\boldsymbol{x}$ is from class $c$\\
   	Superscript rectangular brackets & $a^{[l]}$ & Layer index: $l$ is the index of the layer, e.g. $\boldsymbol{W}^{[l]}$ is the weight matrix of layer $l$\\
   	Superscript curved brackets & $a^{(i)}$ & Sample index: $i$ is the index of the sample, e.g. $\boldsymbol{x}^{(i)}$ is the $i$-th sample of a data set\\
+  	Subscript \& uppercase letter & $\boldsymbol{a}_{C=\overline{c}}$ & The average activation of $\boldsymbol{a}$ for class $c$\\
 \end{tabular}
 
 
